--- a/index.html
+++ b/index.html
@@ -21,16 +21,17 @@
     <section id="main-bio">
       <section id="figure">
         <h2 id="bio-name">Your Name</h2>
-        <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
+        <img id="bio-image" src="https://placehold.it/200x200" alt="Brianna McKelvey">
       </section>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum risus ut justo laoreet consectetur. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc dui neque, malesuada egestas aliquet ac, commodo in magna. Etiam mollis odio at mi maximus hendrerit. Integer aliquam id lectus nec hendrerit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris rhoncus eget nulla in ornare. Maecenas massa nibh, commodo non condimentum eu, congue tempus neque. Donec neque mi, ullamcorper eget fringilla et, iaculis vitae tortor. Curabitur vel nunc vel mi lobortis ornare ut non nulla. Etiam ornare libero ac suscipit aliquam. Nunc venenatis felis sit amet velit vehicula interdum. Vivamus iaculis condimentum nulla vitae dapibus.</p>
+      <p>A driven, detail-oriented Data Analyst with a passion for telling easy to understand stories with complex data. Adept at working independently and collaborating as part of a team to take in information from a wide variety of sources and effectively communicate concepts to diverse audiences. Intellectually curious, enjoys thinking critically and creatively to tackle challenges with a great desire to learn and continuously improve.</p>
     </section>
 
     <aside id="contact-info">
       <h2>Contact Info</h2>
       <ul>
-        <li><strong>Email:</strong> <a href="#">someplace@gmail.com</a></li>
-        <li><strong>Github:</strong> <a href="#">sampleName</a></li>
+        <li><strong>Email:</strong> <a href="#">bmckelvey30@gmail.com</a></li>
+        <li><strong>Github:</strong> <a href="#">bmckelv30</a></li>
+        <li><strong>LinkedIn:</strong> <a href="#">briannamckelvey</a></li>
         <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
       </ul>
     </aside>
