--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>CSS Stylesheets with Relative Paths</title>
+  <title>bmckelv30 bio</title>
 
   <!-- This line is money! It points your HTML to the CSS file. -->
   <!-- Notice the "relative" pathway? It matches a file inside our current directory's "assets" folder. Open it to see our style rules. -->
@@ -13,28 +13,30 @@
 
 <body>
 
-  <header>
-    <h1>Student Bio</h1>
-  </header>
+  <div class="jumbotron">
+    <h1 class="display-3">Nice to meet you!</h1>
+    <p class="lead">Brianna McKelvey's Bio</p>
+  </div>
 
   <main class="container">
     <section id="main-bio">
       <section id="figure">
-        <h2 id="bio-name">Your Name</h2>
         <img id="bio-image" src="https://placehold.it/200x200" alt="Brianna McKelvey">
       </section>
       <p>A driven, detail-oriented Data Analyst with a passion for telling easy to understand stories with complex data. Adept at working independently and collaborating as part of a team to take in information from a wide variety of sources and effectively communicate concepts to diverse audiences. Intellectually curious, enjoys thinking critically and creatively to tackle challenges with a great desire to learn and continuously improve.</p>
     </section>
 
-    <aside id="contact-info">
-      <h2>Contact Info</h2>
-      <ul>
-        <li><strong>Email:</strong> <a href="#">bmckelvey30@gmail.com</a></li>
-        <li><strong>Github:</strong> <a href="#">bmckelv30</a></li>
-        <li><strong>LinkedIn:</strong> <a href="#">briannamckelvey</a></li>
-        <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
-      </ul>
-    </aside>
+    <div class="card border-primary mb-3" style="max-width: 20rem;"></div>
+      <aside id="contact-info">
+        <h2>Contact Info</h2>
+        <ul>
+          <li><strong>Email:</strong> <a href="#">bmckelvey30@gmail.com</a></li>
+          <li><strong>Github:</strong> <a href="#">bmckelv30</a></li>
+          <li><strong>LinkedIn:</strong> <a href="#">briannamckelvey</a></li>
+          <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
+        </ul>
+      </aside>
+    </div>
   </main>
 
 </body>
