updates to index.html and added images

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <main class="container">
     <section id="main-bio">
       <section id="figure">
-        <img id="bio-image" src="https://placehold.it/200x200" alt="Brianna McKelvey">
+        <img id="bio-image" src="images/BMimg.jpg" width="200" height="300" alt="Brianna McKelvey">
       </section>
       <p>A driven, detail-oriented Data Analyst with a passion for telling easy to understand stories with complex data. Adept at working independently and collaborating as part of a team to take in information from a wide variety of sources and effectively communicate concepts to diverse audiences. Intellectually curious, enjoys thinking critically and creatively to tackle challenges with a great desire to learn and continuously improve.</p>
     </section>
