updated with projects

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>bmckelv30 bio</title>
+  <title>bmckelv30 projects</title>
 
   <!-- This line is money! It points your HTML to the CSS file. -->
   <!-- Notice the "relative" pathway? It matches a file inside our current directory's "assets" folder. Open it to see our style rules. -->
@@ -14,17 +14,44 @@
 <body>
 
   <div class="jumbotron">
-    <h1 class="display-3">Nice to meet you!</h1>
-    <p class="lead">Brianna McKelvey's Bio</p>
+    <h1 class="display-3">Projects!</h1>
+    <p class="lead">Brianna McKelvey's Portfolio</p>
   </div>
 
   <main class="container">
-    <section id="main-bio">
-      <section id="figure">
-        <img id="bio-image" src="images/BMimg.jpg" width="200" height="300" alt="Brianna McKelvey">
-      </section>
-      <p>A driven, detail-oriented Data Analyst with a passion for telling easy to understand stories with complex data. Adept at working independently and collaborating as part of a team to take in information from a wide variety of sources and effectively communicate concepts to diverse audiences. Intellectually curious, enjoys thinking critically and creatively to tackle challenges with a great desire to learn and continuously improve.</p>
-    </section>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
+          <div class="card-header">Vacation planning at a glance</div>
+          <div class="card-body">
+            <h4 class="card-title">Air Be & See</h4>
+            <p class="card-text">Air be and see puts all the info in ONE place, so YOU can focus on the fun part of your trip.</p>
+            <button type="button" class="btn btn-outline-primary"><a href="https://air-be-see.herokuapp.com/" target="_blank">Air Be & See on Heroku</a></button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
+          <div class="card-header">Real Estate "Hot or Not"</div>
+          <div class="card-body">
+            <h4 class="card-title">Real Estate Affordability</h4>
+            <p class="card-text">Explore real estate data for information on trends in homebuying/rental activity</p>
+            <button type="button" class="btn btn-outline-primary"><a href="https://github.com/bmckelv30/Project1" target="_blank">Real Estate Affordability on Github</a></button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
+          <div class="card-header">Blame it on the...</div>
+          <div class="card-body">
+            <h4 class="card-title">Alcohol Statistics</h4>
+            <p class="card-text">Look at data related to alcohol consumption from various data sources on a variety of scales: Global, National, and North Carolina/County Levels.</p>
+            <button type="button" class="btn btn-outline-primary"><a href="https://github.com/bmckelv30/Alcohol_Stats" target="_blank">Alcohol Statistics on Github</a></button>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
     <div class="card border-primary mb-3" style="max-width: 20rem;"></div>
       <aside id="contact-info">
@@ -33,7 +60,7 @@
           <li><strong>Email:</strong> <a href="#">bmckelvey30@gmail.com</a></li>
           <li><strong>Github:</strong> <a href="#">bmckelv30</a></li>
           <li><strong>LinkedIn:</strong> <a href="#">briannamckelvey</a></li>
-          <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
+          <li><strong>Portfolio:</strong> <a href="https://bmckelv30.github.io/probable-waddle/">bmckelv30 projects</a></li>
         </ul>
       </aside>
     </div>
