updated index.html - responsive

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <main class="container">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-12">
         <div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
           <div class="card-header">Vacation planning at a glance</div>
           <div class="card-body">
@@ -30,7 +30,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-12">
         <div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
           <div class="card-header">Real Estate "Hot or Not"</div>
           <div class="card-body">
@@ -40,7 +40,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-12">
         <div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
           <div class="card-header">Blame it on the...</div>
           <div class="card-body">
